fixes local time on mobile

--- a/src/assets/scss/components/navigation/_nav-tabbar.scss
+++ b/src/assets/scss/components/navigation/_nav-tabbar.scss
@@ -54,23 +54,25 @@ $nav-tabbar-breakpoint: 625px;
     }
   }
 
+  > .local-time {
+    @include horizontal-center;
+    @include transition(opacity 0.55s);
+    bottom: -6px;
+    color: darken($gray100, 20%);
+    font-size: 12px;
+    opacity: 0;
+    white-space: nowrap;
+    text-transform: lowercase;
+  }
+
   &.is-active {
     > a {
       color: $nav-tabbar-active-link-color;
     }
 
-    > span {
+    > .local-time {
       opacity: 1;
     }
-  }
-
-  > span {
-    @include transition(opacity 0.55s);
-    @include horizontal-center;
-    bottom: -29px;
-    font-size: 12px;
-    color: darken($gray100, 20%);
-    opacity: 0;
   }
 
   @include breakpoint($nav-tabbar-breakpoint) {
@@ -78,6 +80,10 @@ $nav-tabbar-breakpoint: 625px;
 
     & + .nav-tabbar-item {
       margin-left: $nav-tabbar-link-spacing/2;
+    }
+
+    > .local-time {
+      bottom: -29px;
     }
   }
 
